# codec

./: .gitignore  CMakeLists.txt  Makefile  cmakelists.txt  readme.md  sonar-project.properties  vercel.json
.github/workflows/: ci.yml
apps/native/: CMakeLists.txt  CodecExplorerApp.cpp  CodecExplorerApp.h  CvAdapter.cpp  CvAdapter.h  cmakelists.txt  main.cpp
core/: CMakeLists.txt  cmakelists.txt
core/inc/: CodecAnalysis.h  Image.h  ImageCodec.h  MotionEstimator.h  colorspace.h  image.h  processing.h  transform.h  utils.h  wavelet.h
core/src/: CodecAnalysis.cpp  ImageCodec.cpp  MotionEstimator.cpp  colorspace.cpp  image.cpp  main.cpp  processing.cpp  transform.cpp  utils.cpp  wavelet.cpp
core/tests/: CMakeLists.txt  colorspace_test.cpp  image_test.cpp  sanity_test.cpp  test_codecanalysis.cpp  test_imagecodec.cpp  transform_test.cpp  wavelet_test.cpp
web/: .gitignore  codec_web.cpp  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.browser.config.js  vitest.config.js
web/cpp/: codec_web.cpp
web/public/: codec.js  codec.wasm  index.html  main.js  style.css
web/public/css/: base.css  components.css  header.css  inspection.css  inspector-fullpage.css  style.css  utilities.css  variables.css  viewer.css
web/public/js/: image-manager.js  inspection.js  main.js  state.js  suggested-blocks.js  ui-controls.js  wasm-bridge.js
web/src/: App.svelte  ArtifactInspectorMode.svelte  InspectorMode.svelte  ViewerMode.svelte  app.css  codec_web.cpp  main.ts
web/src/lib/: basis-popover.ts  dct-utils.ts  grid-renderer.ts  image-manager.ts  inspection.ts  state.svelte.ts  suggested-blocks.ts  tooltip.ts  wasm-bridge.ts
web/src/lib/components/: ImageViewer.svelte
web/src/styles/: components.css  header.css  inspection.css  inspector-fullpage.css  inspector-grid.css  inspector-layout.css  inspector-pipeline.css  inspector-popover.css  inspector-responsive.css  inspector-sidebar.css  layout.css  onboarding.css  style.css  utilities.css  variables.css  viewer.css
web/src/types/: wasm.d.ts
web/tests/browser/: inspection.browser.test.js
web/tests/setup/: browser.setup.js  unit.setup.js
web/tests/unit/: basis-popover.test.js  dct-utils.test.js  grid-renderer.test.js  inspection.test.js  state.test.js  suggested-blocks.test.js  tooltip.test.js  wasm-bridge.test.js
